--- a/QuizGame/app/src/main/AndroidManifest.xml
+++ b/QuizGame/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.QuizGame"
         tools:targetApi="31">
         <activity
-            android:name=".Geography"
+            android:name=".Difficulty"
+            android:exported="false" />
+        <activity
+            android:name=".GeographyEasy"
             android:exported="false" />
         <activity
             android:name=".StartPage"
@@ -24,6 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
