--- a/QuizGame/app/src/main/AndroidManifest.xml
+++ b/QuizGame/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.QuizGame"
         tools:targetApi="31">
         <activity
+            android:name=".HistoryEasy"
+            android:exported="false" />
+        <activity
             android:name=".ScorePage"
             android:exported="false" />
         <activity
